Fix search input box on safari

--- a/styles/main.css
+++ b/styles/main.css
@@ -248,6 +248,7 @@ main {
     font-weight: lighter;
     border: none;
     background-color: inherit;
+    line-height: 0;
 }
 
 
